fixed: words were broken in labels on overflow

--- a/src/components/SliderX/SliderX.css
+++ b/src/components/SliderX/SliderX.css
@@ -61,7 +61,7 @@
   width: calc(100% - var(--sliderX-thumb-width) / 2);
   border-spacing: 0;
   margin: 0 auto;
-  word-break: break-all;
+  overflow-wrap: break-word;
   table-layout: fixed;
   padding-top: 1em;
   display: table;
